# GitVista

./: AGENTS.md  DEVELOPMENT_PLAN.md  README.md  package-lock.json  package.json  skills-lock.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  lib.rs  store.rs
src/assets/: base.css  main.css
src/components/: CloseConfirmDialog.vue  ContextMenu.vue  CreateBranchDialog.vue  SettingsDrawer.vue  TitleBar.vue
src/components/repo/: ChangesPanel.vue  HistoryPanel.vue  RepoSidebar.vue  RepoToolbar.vue  StatusBar.vue
src/composables/: useSettings.ts  useShortcuts.ts  useTheme.ts
src/router/: index.ts
src/stores/: projects.ts  repo.ts
src/types/: index.ts
src/views/: ProjectListView.vue  RepoView.vue
